styles/style.css
*,
*::after,
*::before {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

:root {
    --accent-color: #1992d4;
    --card-bg-color: #ffffff;
    --main-bg-color: #e2e8f0;
    --main-text-color: #000000;
    --second-text-color: #ffffff;
    --third-text-color: #7e7e7e;
    --shadow-color: #b7bec7;
    --card-accent-color: #f0b429;

    --accent-darker-color: #0b6da2;
}

body {
    font-family: 'Roboto', sans-serif;
}

.container {
    min-height: 100vh;
    display: grid;
    grid-template-columns: repeat(5, 1fr) clamp(300px, 30%, 400px);
    grid-template-rows: 200px auto;
}

.image-link {
    display: grid;
    align-items: center;
    grid-template-columns: 50px auto;
    grid-column-gap: 15px;
    transition: 0.2s ease-out all;
}

.image-link:hover {
    transform: translate(2px, 2px);
}

.image-container {
    display: grid;
    align-items: center;
    justify-items: center;
}


/* Sidebar */

.sidebar {
    padding: 20px;
    display: grid;
    align-content: flex-start;
    row-gap: 60px;
    grid-column: 1 / 2;
    grid-row: 1 / span 2;
    background-color: var(--accent-color);
}

.logo {
    color: var(--second-text-color);
    text-decoration: none;
}

.logo-icon {
    filter: invert(100%) sepia(43%) saturate(0%) hue-rotate(105deg) brightness(106%) contrast(102%);
}

.logo-text {
    margin: 0;
    font-size: 30px;
    font-weight: 700;
}

.nav-list {
    display: grid;
    row-gap: 20px;
    list-style-type: none;
}

.nav-item-icon {
    display: block;
    width: 25px;
    filter: invert(100%) sepia(43%) saturate(0%) hue-rotate(105deg) brightness(106%) contrast(102%);
}

.nav-item-link {
    font-size: 20px;
    font-weight: 600;
    color: var(--second-text-color);
    text-transform: capitalize;
    text-decoration: none;
}


/* Header */

.header {
    padding: 20px clamp(20px, 40px, 40px);
    display: grid;
    grid-template-columns: 2fr 1fr;
    grid-template-rows: 1fr 1fr;
    gap: 20px;
    position: relative;
    grid-column: 2 / span 5;
    grid-row: 1 / span 1;
    background-color: var(--card-bg-color);
}

.shadowed {
    box-shadow: 0 3px 6px var(--shadow-color);
}

.container-line {
    display: flex;
    align-items: center;
    gap: 30px;
}

.button {
    width: 110px;
    min-width: 80px;
    background-color: var(--accent-color);
    border: none;
    border-radius: 25px;
    text-align: center;
    padding: 12px 0px;
    color: var(--second-text-color);
    font-weight: 600;
    transition: 0.1s ease-out all;
}

.button:hover {
    cursor: pointer;
    background-color: var(--accent-darker-color);
    transform: translate(2px, 2px);
}

.header-link-icon {
    transition: 0.1s ease-out all;
}

.header-link-icon:hover {
    transform: scale(1.2, 1.2);
}

.header-link-icon:hover>img[src$=".svg"] {
    filter: invert(50%) sepia(1%) saturate(1818%) hue-rotate(319deg) brightness(89%) contrast(79%);
}

.header-icon {
    width: 25px;
}

.menu,
.manage {
    justify-content: flex-end;
}

.manage {
    margin-right: 40px;
}

.manage-user-photo {
    width: 40px;
    border-radius: 50%;
}

.manage-user-name {
    font-size: 20px;
    font-weight: 600;
}

.search-field {
    background-color: var(--main-bg-color);
    border: none;
    border-radius: 15px;
    outline: none;
    padding: 10px 15px;
    width: 100%;
    font-weight: normal;
    font-size: 16px;
    transition: 0.2s ease-out all;
}

.search-field:focus {
    box-shadow: 2px 2px 4px var(--shadow-color);
}

.welcome {
    display: grid;
    grid-template-columns: 80px auto;
    grid-template-rows: 1fr 2fr;
    column-gap: 20px;
    row-gap: 10px;
    font-weight: 600;
}

.welcome-user-photo {
    width: 100%;
    border-radius: 50%;
    grid-row: 1 / span 2;
    grid-column: 1 / span 1;
}

.welcome-message {
    display: flex;
    align-items: flex-end;
    font-size: 14px;
}

.welcome-user-name {
    font-size: 24px;
}


/* Main */

.main {
    padding: 40px 20px;
    display: grid;
    grid-template-columns: 4fr 1fr;
    column-gap: 20px;
    row-gap: 40px;
    grid-column: 2 / span 5;
    grid-row: 2 / span 1;
    background-color: var(--main-bg-color);
}

.section-title {
    font-weight: 600;
    font-size: 24px;
    margin-bottom: 10px;
}


/* Projects */

.projects {
    grid-row: 1 / span 2;
}

.projects-container {
    display: grid;
    gap: 20px;
    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
}

.card {
    padding: 35px;
    background-color: var(--card-bg-color);
    border-radius: 10px;
}

.project {
    padding-bottom: 65px;
    padding-left: 25px;
    position: relative;
    display: flex;
    flex-direction: column;
    min-height: 250px;
    border-left: 10px solid var(--card-accent-color);
    transition: 0.2s ease-out all;
}

.project:hover {
    border-left: 10px solid var(--accent-darker-color);
}

.project-title {
    font-weight: 600;
    font-size: 20px;
    margin-bottom: 5px;
}

.project-description {
    font-weight: 400;
    font-size: 18px;
    color: var(--third-text-color);
}

.project-action-container {
    position: absolute;
    bottom: 35px;
    right: 35px;
    display: flex;
    gap: 25px;
}

.project-action {
    text-decoration: none;
    transition: 0.2s ease-out all;
}

.project-action:hover {
    transform: scale(1.2, 1.2);
}

.project-action-icon {
    width: 30px;
}


/* Announs */

.announs-title {
    margin-bottom: 5px;
}

.announs-text {
    color: var(--third-text-color);
}

.straight-separator {
    margin: 20px 0 20px -10px;
    background-color: var(--third-text-color);
}


/* Trending */

.trending-container {
    display: flex;
    flex-direction: column;
    gap: 20px;
}

.trending-link {
    display: flex;
    gap: 15px;
    border-radius: 20px;
    text-decoration: none;
    color: inherit;
    transition: 0.2s ease-out all;
}

.trending-link:hover {
    background-color: var(--main-bg-color);
    transform: translate(1px, 1px);
}

.trending-icon {
    width: 50px;
    height: 100%;
    border-radius: 50%;
}

.trending-item {
    display: flex;
    flex-direction: column;
    justify-content: center;
    gap: 5px;
}

.trending-item-descriptor {
    font-weight: 500;
    font-size: 14px;
    color: var(--main-text-color);
}

.trending-item-name {
    font-weight: 400;
    font-size: 16px;
    color: var(--third-text-color);
}

@media screen and (max-width: 1120px) {
    .welcome {
        grid-template-rows: 1fr 3fr;
    }

    .welcome-user-photo {
        grid-row: 1 / span 3;
    }

    .welcome-message {
        display: flex;
        align-items: flex-end;
        font-size: 14px;
    }

    .welcome-user-name {
        font-size: 24px;
    }
}

@media screen and (max-width: 980px) {
    .welcome-user-name {
        font-size: 18px;
    }
}

